src/objects/RSO_AreaLookup__c.object
<CustomObject>
    <description>Regional Support Officers (RSOs) who run Dementia Friend training with the postcode areas they cover.</description>
    <fields>
        <fullName>DFContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of RSO</inlineHelpText>
        <label>Regional Support Officer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DF_Contact__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>RSO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>RSO Area Lookups</relationshipLabel>
        <relationshipName>RSO_Area_Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postcode_Supported__c</fullName>
        <inlineHelpText>Enter a list of postcodes this RSO supports.  Enter the one or two letters of the postal area</inlineHelpText>
        <label>Postcodes Supported</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <label>Training Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>RSO Area Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Postcode_Supported__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RSO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSO Area Lookups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>